--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MobileVax</string>
+    <string name="menu_open">Open Menu</string>
+    <string name="menu_close">Close Menu</string>
 </resources>
